--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -567,7 +567,7 @@
   "sidebar.multiLevel.level3": "Level 3",
   "sidebar.listTitle": "Options",
   "sidebar.card.sliderSettings": "Slider",
-  "sidebar.card.page2": "Popular Categories",
+  "sidebar.card.popularCategories": "Popular Categories",
   "sidebar.card.page3": "Assets",
   "sidebar.card.page4": "Catalogs",
   "sidebar.card.page5": "Items",
@@ -726,6 +726,8 @@
   "common.validation.maxLengthFirstPart": "Content of this field may not be longer than",
   "common.validation.maxLengthSecondPart": "characters!",
   "common.validation.requiredField": "This is a required field!",
+  "cropper.cropImage": "Crop Image",
+  "cropper.actionButton": "Crop",
   "sliderSettings.sliderSettingsTitle": "Slider Settings",
   "sliderSettings.sliderSettingsDescription": "Use this page to manage slides. You need at least 1 and maximum 5 slides.",
   "sliderSettings.addNewSlider": "Add New Slide",
@@ -746,6 +748,14 @@
   "sliderSettings.form.tooltipView": "View Slide",
   "sliderSettings.form.tooltipEdit": "Edit Slide",
   "sliderSettings.form.tooltipDelete": "Delete Slide",
-  "cropper.cropImage": "Crop Image",
-  "cropper.actionButton": "Crop"
+  "popularCategories.popularCategoriesTitle": "Popular Categories Options",
+  "popularCategories.popularCategoriesDescription": "Use this page to manage popular categories. You have three (3) slots to manage. Slots can not be deleted",
+  "popularCategories.grid.column.position": "№ Position",
+  "popularCategories.grid.column.title": "Title",
+  "popularCategories.grid.column.action": "Explore action",
+  "popularCategories.grid.column.gridActions": "",
+  "popularCategories.form.editTitle": "Edit category",
+  "popularCategories.form.categoryTitle": "Category title",
+  "popularCategories.form.categoryAction": "Action ( link ) for Explore btn",
+  "popularCategories.form.acceptableImagesMsg": "jpeg, jpg, png, gif - Max: 5MB"
 }
