--- a/src/shared/localization/locales/fr_FR.json
+++ b/src/shared/localization/locales/fr_FR.json
@@ -71,7 +71,7 @@
   "sidebar.card.page5": "Items",
   "sidebar.card.page6": "Show Room",
   "sidebar.card.teamSettings": "Team",
-  "sidebar.card.page8": "Mega Menu",
+  "sidebar.card.megaMenuSettings": "Mega Menu",
   "sidebar.card.page9": "List Of Companies",
   "sidebar.card.page10": "List Of All Users",
   "sidebar.card.page11": "List Of All Orders",
@@ -110,7 +110,7 @@
   "sliderSettings.form.validation.actionIsReqired": "If you have button, action field is required",
   "sliderSettings.form.validation.buttonIsReqired": "If you have action, button field is required",
   "popularCategories.popularCategoriesTitle": "Popular Categories Options",
-  "popularCategories.popularCategoriesDescription": "Use this page to manage popular categories. You have three (3) slots to manage. Slots can not be deleted",
+  "popularCategories.popularCategoriesDescription": "Use this page to manage popular categories. You have three (3) slots to manage. Slots can not be deleted.",
   "popularCategories.grid.column.position": "№ Position",
   "popularCategories.grid.column.title": "Title",
   "popularCategories.grid.column.action": "Explore action",
@@ -119,6 +119,8 @@
   "popularCategories.form.categoryTitle": "Category title",
   "popularCategories.form.categoryAction": "Action ( link ) for Explore btn",
   "popularCategories.form.acceptableImagesMsg": "jpeg, jpg, png, gif - Max: 5MB",
+  "productVariations.productVariationsTitle": "Product Variations",
+  "productVariations.productVariationsDescription": "Use this page to manage Product Variations",
   "teamSettings.teamSettingsTitle": "Team Settings Options",
   "teamSettings.teamSettingsDescription": "Use this page to manage Your team. You can add, edit and delete team members.",
   "teamSettings.addNewTeamMember": "Add New Member",
@@ -129,5 +131,11 @@
   "teamSettings.form.addEditTitle": "Add or edit team member",
   "teamSettings.form.memberName": "Team member name",
   "teamSettings.form.memberPosition": "Member role (position in company)",
-  "teamSettings.form.acceptableImagesMsg": "Image is required (jpeg, jpg, png, gif - Max: 2MB)"
+  "teamSettings.form.acceptableImagesMsg": "Image is required (jpeg, jpg, png, gif - Max: 2MB)",
+  "megaMenuSettings.megaMenuSettingsTitle": "Mega Menu Settings",
+  "megaMenuSettings.megaMenuSettingsDescription": "Use this page to manage images associated with categories in mega menu. Slots can not be deleted.",
+  "megaMenuSettings.grid.column.gridActions": "",
+  "megaMenuSettings.grid.column.category": "Category",
+  "megaMenuSettings.form.editTitle": "Edit image of category",
+  "megaMenuSettings.form.acceptableImagesMsg": "Image is required (jpeg, jpg, png, gif - Max: 2MB)"
 }
